<resources>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="short_description">Short Description (Optional)</string>
    <string name="title">Title</string>
    <string name="url">URL</string>
    <string name="log_out">Log Out</string>
    <string name="share">Share</string>
    <string name="invitation_deep_link">www.google.com</string>
    <string name="invite_message">Discover a vast ocean of opportunities that lay ahead of you</string>
    <string name="invite_title">Come Join me in Global Launchpad Initiative</string>
    <string name="invitation_custom_image">http://gravatar.com/avatar/</string>
    <string name="invitation_cta">Download</string>
    <string name="theme_pref_title">Night Mode</string>
    <string name="theme_pref_desc">Reduce strain on your eyes by enabling night mode</string>
    <string name="title_list_preference">Background Sync Interval</string>
    <string name="dialog_title_list_preference">Time interval for fetching content</string>
    <string name="list_prev_summary">Change the time interval for fetching content in the background</string>
    <string name="title_activity_settings">Settings</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="banner_ad_unit_id">ca-app-pub-9291391930070237/7932322507</string>
</resources>
