<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/contentURL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/url"
            android:textColor="?android:attr/textColorPrimary"
            android:inputType="textUri"
            android:textSize="@dimen/customTitle" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/contentTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:maxLength="28"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="@dimen/customTitle" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/contentDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/short_description"
            android:inputType="textMultiLine"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="@dimen/customTitle" />
    </android.support.design.widget.TextInputLayout>

    <Spinner
        android:id="@+id/contentSpinners"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>